# Imoveis_Campinas

./: pyproject.toml
Web Scraping/: Sources.txt  scraping.py
