[tool.poetry]
name = "imoveis campinas"
version = "0.1.0"
description = ""
authors = ["Giovane Carvalho <degio2009@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
